Crud operation update in swagger api controller
