# app/Http/Controllers/API/ProjectController.php
@@ -15,59 +15,54 @@ use Illuminate\Support\Str;
 class ProjectController extends BaseController
 {
     /**
-        * @OA\Get(
-        *     path="/api/projects",
-        *     summary="Get a list of projects",
-        *     tags={"Projects"},
-        *     security={{"sanctum":{}}},
-        *      @OA\Parameter(
-        *         name="name",
-        *         in="query",
-        *         description="Project name",
-        *         @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="status",
-        *         in="query",
-        *         description="Project status",
-        *        @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="due_date",
-        *         in="query",
-        *         description="Project deadline date",
-        *         @OA\Schema(type="date"),
-        *      ),
-        *     @OA\RequestBody(
-        *         @OA\JsonContent(),
-        *         @OA\MediaType(
-        *            mediaType="multipart/form-data",
-        *        ),
-        *    ),
-        *     @OA\Response(response=200, description="Get lists of projects"),
-        *     @OA\Response(response=400, description="Invalid request")
-        * )
-    */
+     * @OA\Get(
+     *     path="/api/projects",
+     *     summary="Get a list of projects",
+     *     tags={"Projects"},
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         name="name",
+     *         in="query",
+     *         description="Name of the project",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Status of the project",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="due_date",
+     *         in="query",
+     *         description="Due date of the project",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Response(response=200, description="Get lists of projects", @OA\JsonContent()),
+     *     @OA\Response(response=400, description="Invalid request", @OA\JsonContent()),
+     * )
+     */
+
     public function index()
     {
         $query = Project::query();
         //search 
-        if(request("name")) {
-            $query->where("name","LIKE","%".request("name")."%");
-        }
+        // if(request("name")) {
+        //     $query->where("name","LIKE","%".request("name")."%");
+        // }
 
-        if(request("status")) {
-            $query->where("status",request("status"));
-        }
+        // if(request("status")) {
+        //     $query->where("status",request("status"));
+        // }
 
-        if(request("due_date")) {
-            $query->whereDate("due_date",request("due_date"));
-        }
+        // if(request("due_date")) {
+        //     $query->whereDate("due_date",request("due_date"));
+        // }
 
         //sorting
         $sortField = request("sort_field","created_at");
         $sortDirection = request("sort_direction","desc");
-
+        $projects = $query->get();
         $projects = $query->orderBy($sortField,$sortDirection)->paginate(10)->onEachSide(1);
         return response()->json([
             'projects' => $projects,
@@ -78,52 +73,35 @@ class ProjectController extends BaseController
 
     /**
         * @OA\POST(
-        *     path="/api/projects/store",
+        *     path="/api/projects",
         *     summary="Store projects",
         *     security={{"sanctum":{}}},
-        *      @OA\Parameter(
-        *         name="name",
-        *         in="query",
-        *         required=true,
-        *         description="Project Name",
-        *        @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="description",
-        *         in="query",
-        *         required=false,
-        *         description="Project Description",
-        *         @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="status",
-        *         in="query",
-        *         required=true,
-        *         example="active or inactive", 
-        *         description="Project status",
-        *        @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="due_date",
-        *         in="query",
-        *         required=true,
-        *         example="YYYY-MM-DD", 
-        *         description="Project deadline date",
-        *         @OA\Schema(type="string",format="date"),
+        *     @OA\RequestBody(
+        *         @OA\JsonContent(),
+        *         @OA\MediaType(
+        *            mediaType="multipart/form-data",
+        *            @OA\Schema(
+        *               type="object",
+        *               required={"name","status", "due_date"},
+        *               @OA\Property(property="name", type="text"),
+        *               @OA\Property(property="status", type="text"),
+        *               @OA\Property(property="due_date", type="date"),
+        *            ),
+        *        ),
         *      ),
         *     tags={"Projects"},
-        *     @OA\Response(response=200, description="Project Created Successful"),
-        *     @OA\Response(response=400, description="Invalid request"),
-        *     @OA\Response(response=401, description="Unauthorized request"),
-        *     @OA\Response(response=403, description="Forbidden request"),
-        *     @OA\Response(response=404, description="Not Found")
+        *     @OA\Response(response=200, description="Project Created Successful",  @OA\JsonContent()),
+        *     @OA\Response(response=400, description="Invalid request",  @OA\JsonContent()),
+        *     @OA\Response(response=401, description="Unauthorized request",  @OA\JsonContent()),
+        *     @OA\Response(response=403, description="Forbidden request",  @OA\JsonContent()),
+        *     @OA\Response(response=404, description="Not Found",  @OA\JsonContent())
         * )
     */
     public function store(StoreProjectRequest $request)
     {
         $data = $request->validated();
-        $data['created_by'] =  1;
-        $data['updated_by'] =  1;
+        $data['created_by'] =  auth()->id();
+        $data['updated_by'] =  auth()->id();
         if($request->hasFile('image')){
             $image_tmp = $request->file('image');
             if($image_tmp->isValid()){
@@ -135,7 +113,7 @@ class ProjectController extends BaseController
         }
         $project = Project::create($data);
         return response()->json([
-            'project' =>  'test',
+            'project' =>  $project,
             'status' => 200
         ]);
     }
@@ -155,11 +133,11 @@ class ProjectController extends BaseController
         *         @OA\Schema(type="integer")
         *      ),
         *     tags={"Projects"},
-        *     @OA\Response(response=200, description="Show single project"),
-        *     @OA\Response(response=400, description="Invalid request"),
-        *     @OA\Response(response=401, description="Unauthorized request"),
-        *     @OA\Response(response=403, description="Forbidden request"),
-        *     @OA\Response(response=404, description="Not Found")
+        *     @OA\Response(response=200, description="Project Created Successful",  @OA\JsonContent()),
+        *     @OA\Response(response=400, description="Invalid request",  @OA\JsonContent()),
+        *     @OA\Response(response=401, description="Unauthorized request",  @OA\JsonContent()),
+        *     @OA\Response(response=403, description="Forbidden request",  @OA\JsonContent()),
+        *     @OA\Response(response=404, description="Not Found",  @OA\JsonContent())
         * )
     */
     public function show(Project $project)
@@ -177,9 +155,9 @@ class ProjectController extends BaseController
     }
 
     /**
-        * @OA\PUT(
+        * @OA\PATCH(
         *     path="/api/projects/{projectId}",
-        *     summary="Update single project",
+        *     summary="Update projects",
         *     operationId="updateProjectId",
         *     security={{"sanctum":{}}},
         *      @OA\Parameter(
@@ -189,42 +167,25 @@ class ProjectController extends BaseController
         *         description="Project Update Id",
         *         @OA\Schema(type="integer")
         *      ),
-        *      @OA\Parameter(
-        *         name="name",
-        *         in="query",
+        *     @OA\RequestBody(
         *         required=true,
-        *         description="Project Name",
-        *        @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="description",
-        *         in="query",
-        *         required=false,
-        *         description="Project Description",
-        *         @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="status",
-        *         in="query",
-         *        required=true,
-        *         description="Project status",
-        *        @OA\Schema(type="string"),
-        *      ),
-        *      @OA\Parameter(
-        *         name="due_date",
-        *         in="query",
-        *         required=true,
-        *         description="Project deadline date",
-        *         @OA\Schema(type="date"),
-        *      ),
+        *         description="Updated project data",
+        *         @OA\JsonContent(
+        *             required={"name", "status", "due_date"},
+        *             @OA\Property(property="name", type="string"),
+        *             @OA\Property(property="status", type="string"),
+        *             @OA\Property(property="due_date", type="string", format="date"),
+        *         ),
+        *     ),
         *     tags={"Projects"},
-        *     @OA\Response(response=200, description="Project Updated Successful"),
-        *     @OA\Response(response=400, description="Invalid request"),
-        *     @OA\Response(response=401, description="Unauthorized request"),
-        *     @OA\Response(response=403, description="Forbidden request"),
-        *     @OA\Response(response=404, description="Not Found")
+        *     @OA\Response(response=200, description="Project Created Successful",  @OA\JsonContent()),
+        *     @OA\Response(response=400, description="Invalid request",  @OA\JsonContent()),
+        *     @OA\Response(response=401, description="Unauthorized request",  @OA\JsonContent()),
+        *     @OA\Response(response=403, description="Forbidden request",  @OA\JsonContent()),
+        *     @OA\Response(response=404, description="Not Found",  @OA\JsonContent())
         * )
     */
+
     public function update(UpdateProjectRequest $request, Project $project)
     {
         $data = $request->validated();
@@ -252,7 +213,6 @@ class ProjectController extends BaseController
     }
 
       /**
-      
         * @OA\DELETE(
         *     path="/api/projects/{projectId}",
         *     summary="Remove single projects",
@@ -260,33 +220,28 @@ class ProjectController extends BaseController
         *     security={{"sanctum":{}}},
         *      @OA\Parameter(
         *         name="projectId",
-        *         in="query",
+        *         in="path",
         *         required=true,
         *         description="Project Remove Id",
         *         @OA\Schema(type="integer")
         *      ),
         *     tags={"Projects"},
-        *     @OA\Response(response=200, description="Project Remove Successful"),
-        *     @OA\Response(response=400, description="Invalid request"),
-        *     @OA\Response(response=401, description="Unauthorized request"),
-        *     @OA\Response(response=403, description="Forbidden request"),
-        *     @OA\Response(response=404, description="Not Found")
+        *     @OA\Response(response=200, description="Project Created Successful",  @OA\JsonContent()),
+        *     @OA\Response(response=400, description="Invalid request",  @OA\JsonContent()),
+        *     @OA\Response(response=401, description="Unauthorized request",  @OA\JsonContent()),
+        *     @OA\Response(response=403, description="Forbidden request",  @OA\JsonContent()),
+        *     @OA\Response(response=404, description="Not Found",  @OA\JsonContent())
         * )
     */
     public function destroy(Project $project)
     {
-        if($project->tasks()->exists()){
-            return response()->json([
-                'status' => 400
-            ]);
-        }
         //remove image
         if($project->image != null){
             Storage::delete('projects/'.$project->image);
         }
+        $project->tasks()->delete();
         $project->delete();
         return response()->json([
-            'project' =>  null,
             'status' => 200
         ]);
     }
