# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\API\LoginController;
 use App\Http\Controllers\API\ProjectController;
 use App\Http\Controllers\API\TaskController;
+use App\Http\Controllers\API\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -17,16 +18,16 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('api')->group(function(){
+
+
+Route::middleware(['web'])->group(function(){
     Route::post('/login/store',[LoginController::class,'login']);
-    
-    Route::middleware(['auth:sanctum'])->group(function(){
-        Route::apiResource('projects',ProjectController::class)->except(['create','edit']);
-    });
-        
+});
+
+Route::middleware('auth:sanctum')->group(function(){
+    Route::apiResource('projects',ProjectController::class)->except(['create','edit']);
 });
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-
